fixed wonky buttons on ios

--- a/static/css/styling.css
+++ b/static/css/styling.css
@@ -1,3 +1,7 @@
+* {
+	-webkit-appearance: none
+}
+
 body {
 	background-color: #111;
 	margin: 10px
